--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 {
+    "python.languageServer": "None",
     "python.testing.unittestArgs": [
-        "-v",
-        "-s",
-        "./tests",
-        "-p",
-        "test_*.py"
+        "-v",                     // Verbose output
+        "-s", "./tests",         // Start directory for tests
+        "-p", "test_*.py"        // Pattern for test files
     ],
     "python.testing.pytestEnabled": false,
     "python.testing.unittestEnabled": true
